<resources>
    <string name="app_name">myFootballApp</string>
    <string name="home_team">Home Team</string>
    <string name="score">Score</string>
    <string name="touchdown">Touchdown</string>
    <string name="field_goal">Field Goal</string>
    <string name="extra_point">Extra Point</string>
    <string name="safety">Safety</string>
    <string name="fouls">Fouls</string>
    <string name="away_team">Away Team</string>
</resources>
