<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:src="@drawable/american_football" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/home_team" />

            <TextView
                android:id="@+id/home_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="touchdownHome"
                android:text="@string/touchdown" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="fieldGoalHome"
                android:text="@string/field_goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="extraPointHome"
                android:text="@string/extra_point" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="safetyHome"
                android:text="@string/safety" />

            <TextView
                android:id="@+id/homeFoulsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/fouls" />

            <Button
                android:id="@+id/foulsHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="addFoulHome" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/away_team" />

            <TextView
                android:id="@+id/away_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textSize="24sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="touchdownAway"
                android:text="@string/touchdown" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="fieldGoalAway"
                android:text="@string/field_goal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="extraPointAway"
                android:text="@string/extra_point" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="safetyAway"
                android:text="@string/safety" />

            <TextView
                android:id="@+id/awayFoulsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/fouls" />

            <Button
                android:id="@+id/foulsAway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:onClick="addFoulAway" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="reset"
        android:text="RESET" />

</LinearLayout>